--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Kazge Blog {{ site.baseurl }}
+title: Kazge Blog 
 ---
 
 <!-- This loops through the paginated posts -->
