--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: {{post.title}} 
+title: Ka's Blog 
 ---
 
 <!-- This loops through the paginated posts -->
 {% for post in paginator.posts %}
-<h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+<h1><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
 <p class="author">
   <span class="date">{{ post.date }}</span>
 </p>
