--- a/show/index.html
+++ b/show/index.html
@@ -92,7 +92,7 @@ order: 1
 
 			<div class="articleBody clear">
 				<div class="figure">
-					<img src="img/karaokkong-show.gif" width="620" height="340" alt="Karaok Kong" />
+					<img src="img/karaokkong-show.jpg" width="427" height="759" alt="Karaok Kong" />
 				</div>
 
 				<p>
