update volitant egg url to free version

--- a/show/index.html
+++ b/show/index.html
@@ -31,7 +31,7 @@ order: 1
 
 		<div class="article" id="article1">
 			<h2>
-				<a href="https://itunes.apple.com/us/app/volitant-egg/id1241859979?l=zh&ls=1&mt=8">Indie 2D Mobile Game: Volitant Egg</a>
+				<a href="https://itunes.apple.com/us/app/volitant-egg-ads-version/id1247264387?mt=8">Indie 2D Mobile Game: Volitant Egg</a>
 				<small class="post-date heading"><time>2017</time></small>
 			</h2>
 
@@ -45,7 +45,7 @@ order: 1
 				<p>
 					My Third Indie Game:
 					<li>Based on Unity2D
-						<li><a href="https://itunes.apple.com/us/app/volitant-egg/id1241859979?l=zh&ls=1&mt=8">Available In App Store</a>
+						<li><a href="https://itunes.apple.com/us/app/volitant-egg-ads-version/id1247264387?mt=8">Available In App Store</a>
 				</p>
 			</div>
 		</div>
