--- a/show/index.html
+++ b/show/index.html
@@ -31,7 +31,7 @@ order: 1
 
 		<div class="article" id="article1">
 			<h2>
-				<a href="https://itunes.apple.com/us/app/volitant-egg-ads-version/id1247264387?mt=8">Indie 2D Mobile Game: Volitant Egg</a>
+				<a href="https://itunes.apple.com/us/app/volitant-egg-ads-version/id1247264387?mt=8">Indie 2D Mobile Game: Aero Egg</a>
 				<small class="post-date heading"><time>2017</time></small>
 			</h2>
 
