remove strange link

--- a/_posts/2011-05-27-%e3%80%90%e8%bd%ac%e3%80%91%e5%a4%a7%e5%9e%8bweb2-0%e7%ab%99%e7%82%b9%e6%9e%84%e5%bb%ba%e6%8a%80%e6%9c%af%e5%88%9d%e6%8e%a2%e4%b8%80.html
+++ b/_posts/2011-05-27-%e3%80%90%e8%bd%ac%e3%80%91%e5%a4%a7%e5%9e%8bweb2-0%e7%ab%99%e7%82%b9%e6%9e%84%e5%bb%ba%e6%8a%80%e6%9c%af%e5%88%9d%e6%8e%a2%e4%b8%80.html
@@ -29,10 +29,10 @@ author:
 <p>六、 通过了解MySpace的六次重构经历,来认识分布式系统到底该如何创建</p>
 <p>七、 从LiveJournal后台发展看大规模网站性能优化方法</p>
 <p>八、 说说大型高并发高负载网站的系统架构</p>
-<h6>一、 <a href="http://www.8211.cn/"><u>web2.0 </u></a>网站常用可用性功能模块分析</h6>
+<h6>一、 <u>web2.0 </u></a>网站常用可用性功能模块分析</h6>
 <p>Web 2.0网站是指将传统的网站构架（平台、内容源、用户、传播方式等）转化到以用户为核心的网站构架上来，包括一系列体现web2.0概念的元素、定位和创意。web2.0网站在构架上须体现两大宗旨，即强大的后台系统和简单的前台页面，也即提供良好的用户体验，体现以人为本，技术服务人类的宗旨。</p>
 <p>web2.0网站常用功能块通常包括以下几大项：</p>
-<p><a href="http://www.8211.cn/"><u><b>1.</b> <b>Tag</b> <b>标签功能块</b></u></a></p>
+<p><u><b>1.</b> <b>Tag</b> <b>标签功能块</b></u></a></p>
 <p>Tag(中文叫做&quot;标签&quot;) 是一种新的组织和管理在线信息的方式。它不同于传统的、针对文件本身的关键字检索，而是一种模糊化、智能化的分类。</p>
 <p> 网页使用Tag标签的好处：</p>
 <p>为页面设置一个或者多个Tag标签可以引导读者阅读更多相关文章，为别人带去流量同理也为自己带来流量。</p>
@@ -40,26 +40,26 @@ author:
 <p>Tag是人的意志和趋向的体现，Tag可以帮助你找到兴趣相投的人。</p>
 <p> 基于以上优势，Tag标签代替了传统的分类法，成为web2.0网站使用率最高的功能块（与其说是功能块倒不如说是一种内容导航和内容组织形式）。</p>
 <p> 一句话：Tag标签是一种更灵活的分类方法，功能在于引导，特点是无处不在，体现智能性、模糊性和趋向性。</p>
-<p><a href="http://www.8211.cn/"><u><b>2.</b> <b>RSS</b> <b>订阅功能块</b></u></a></p>
+<p><u><b>2.</b> <b>RSS</b> <b>订阅功能块</b></u></a></p>
 <p>RSS 是在线共享内容的一种简易方式（也叫聚合内容，Really Simple Syndication）。通常在时效性比较强的内容上使用RSS订阅能更快速获取信息，网站提供RSS输出，有利于让用户获取网站内容的最新更新。网络用户可以在客户端借助于支持RSS的聚合工具软件（例如SharpReader,NewzCrawler、FeedDemon），在不打开网站内容页面的情况下阅读支持RSS输出的网站内容。</p>
 <p>RSS订阅的方式：</p>
 <p>订阅到客户端软件如周伯通、遨游浏览器RSS阅读、Foxmail RSS阅读等，此方式使用者较多</p>
 <p>订阅到在线阅读（聚合类）门户网站如Google Reader，Yahoo Reader，抓虾、Gougou等，省去了安装RSS阅读器的麻烦</p>
 <p>订阅到在线单用户聚合器如Lilina等，比较灵活</p>
 <p>RSS订阅功能的最大好处是定向投递，也就是说RSS机制更能体现用户的意愿和个性，获取信息的方式也最直接和简单，这是RSS订阅功能备受青睐的一大主要原因。</p>
-<p><a href="http://www.8211.cn/"><u><b>3.</b> <b>推荐和收藏功能块</b></u></a></p>
+<p><u><b>3.</b> <b>推荐和收藏功能块</b></u></a></p>
 <p> 说到推荐功能，不仅web2.0网站在大量使用，传统的以cms平台为代表的内容模式的网站也在大量使用，推荐功能主要是指向一些网摘或者聚合类门户网站推荐自己所浏览到的网页。当然，一种变相的推荐就是阅读者的自我收藏行为，在共享的模式下也能起到推荐的作用。</p>
 <p> 比较有名的推荐目标有以del.icio.us为代表的网摘类网站包括国内比较有名气的365key、和讯网摘、新浪vivi、天极网摘等。这里值得一提的是前段时间曾涌现了大批网摘类网站，但他们坚持活下来的好像没有几个了，推荐使用前面提到的这几个网摘门户，人气基本上是使最旺的。</p>
-<p><a href="http://www.8211.cn/"><u><b>4.</b> <b>评论和留言功能块</b></u></a></p>
+<p><u><b>4.</b> <b>评论和留言功能块</b></u></a></p>
 <p>web2.0 强调参与性，强调发挥用户的主导作用，这里的参与性除了所谓的订阅、推荐功能外更多地体现在用户对内容的评价和态度，这就要靠评论功能块来完成。一个典型的web2.0网站或者说一个能体现人气的web2.0网站都会花大量篇幅来体现用户的观点和视觉。这里尤其要提到web2.0中的带头老大web blog，评论功能已经成为博客主人与浏览者交流的主要阵地，是体现网站人气的最直观因素。</p>
 <p> 评论功能块应用在博客系统中实际上已经和博客内容相分离，而更好的应用恰恰是一些以点评为主的web2.0网站比如豆瓣、点评网等，这里的评论功能块直接制造了内容也极大地体现了网站的人气，所以说评论功能块是web2.0网站最有力的武器。</p>
 <p><b>5.</b> <b>站内搜索功能块</b></p>
 <p> 搜索是信息来源最直接的方式之一，无论你的网站是否打上web2.0的烙印，搜索对于一个体系庞大、内容丰富的大型网站都是非常必要的。Tag标签在某种程度上起到搜索的作用，它能够有效聚合以此Tag为关键词的内容，但这种情况的前提是此Tag标签对浏览者是可见的，也就是说当Tag标签摆在浏览者的眼前时才成立，而对于那些浏览者想要的信息却没有Tag标签来引导时搜索就是达到此目的的最好方法。</p>
 <p> 对于web2.0网站，站内搜索以标题或者Tag为搜索域都能起到好的效果，但本人不建议使用内容搜索域，因为这不符合搜索的高效性原则。同时，具有突出关键词的内容往往都可以用Tag标签来引导，因此使用内容域来搜索实际上是一种浪费服务器资源的行为，而且搜索结果的准确性将大打折扣。</p>
-<p><a href="http://www.8211.cn/"><u><b>6.</b> <b>群组功能块</b></u></a></p>
+<p><u><b>6.</b> <b>群组功能块</b></u></a></p>
 <p> 我为什么要把群组作为web2.0网站的功能块来分析呢，因为群组是web2.0网站的一大特点，也是web2.0所要体现的服务宗旨所在。一个 web2.0网站，博客也好、播客也好、点评也好，抑或是网摘、聚合门户，他们都强调人的参与性。物以类聚、人以群分，每个参与者都有自己的兴趣趋向，web2.0网站的另一主要功能就是帮助这些人找到同样兴趣的人并形成一个活跃的群体，这是web2.0网站的根本。</p>
 <p>总结：web2.0网站倡导的是集体创作、共享资源，靠的是人气，体现的是参与性，一个没有参与性的web2.0网站都不足以成为web2.0。以上提到的这几个功能块就是以吸引用户参与和引导用户参与为目的的，真正的web2.0不是什么深奥的东西，只有一点，那就是如何让浏览者沸腾起来。</p>
-<h6><a href="http://www.8211.cn/"><u>二、 Flickr </u></a>的幕后故事</h6>
+<h6><u>二、 Flickr </u></a>的幕后故事</h6>
 <p>我们都看到 Flickr 的成功，而又有多少&quot;精英&quot;们了解过 Flickr 背后的过程是多么充满艰险。</p>
 <p>Flickr 是全 CGI 的动态构架，并以一种 .gne 的脚本作为 CGI 程序语言。不管网站制作菜鸟还是高手都会疑惑：gne 是哪种程序语言？答案：gne 不是一种语言，Flickr 是以极为经典的 PHP + MySQL 方式实现的，在被 Yahoo 收购服务器搬入美国之前，使用了 21 台（69.90.111.101-121） Apache/PHP 做 Web、23 台图片服务器、另有 MySQL 服务器组成的数据库集群的服务器数量未知。现在估计使用的是 Yahoo 的负载均衡系统，对外只有一个 Web 的 IP 和图片服务器的 IP 了。</p>
 <p> 那为何 .php 的文件要改成 .gne 呢？以往有大型网站为向后兼容性考虑，隐藏以程序语言命名的脚本文件扩展名，比如 Baidu 隐藏了 .php（Google 的 http 服务器是自己写的，整合了脚本程序，个别页面是 .py--Python）；还有一些网站是改成自己网站名相关的扩展名，如 MSN 的群组则是 .msnw，榕树下是 .rs。</p>
@@ -67,7 +67,7 @@ author:
 <p> 早期的 Flickr 想做成在类似聊天室的地方让网友分享、交流自己的照片，注重社区形式和保护照片不被外部引用（见徐子涵2004年的文章），可能是看到了 Hello 的模式吧。但是聪明的 Flickr 团队不久就改变了策略，淡化了传统的社区形式--如聊天室、而加强了现在使其功成名就的 Tag 组织形式，一种更自由更随兴更轻松好玩的大社区形式，或者叫它广义社区吧，我随便叫的，可能太学究，看着别太在意就是了。另外，将原来照片只能在 Flash 内浏览的限制区除了，并大力推荐用户将照片引用到自己的 Blog，这无疑对于挑战传统相册系统有决定性意义。减少 Flash 后的网页更多地引进了新兴的 Ajax 技术，使界面操作变得非常 Cool。</p>
 <p> 这就是 Flickr 的历史，清晰地看到了他们对于优秀产品的执著。有了技术和经验积累，加上不断坚持，总有一天时来运转，你的产品会成为新潮流的里程碑。</p>
 <p> 还有一句话要告诉 Yupoo 等：把 Flickr 想成一个有 Tag 功能的在线相册就已经错远了；复制粘贴者们想当然将 Flickr 去其糟粕取其精华，结果无关紧要的拿来了，将令人激动的优点都去掉了，结果剩下什么？</p>
-<h6><a href="http://www.8211.cn/"><u>三、 YouTube </u></a>的架构扩展</h6>
+<h6><u>三、 YouTube </u></a>的架构扩展</h6>
 <p>在西雅图扩展性的技术研讨会上，YouTube 的 Cuong Do 做了关于 YouTube Scalability 的报告。视频内容在 Google Video 上有(地址)，可惜国内用户看不到。</p>
 <p>Kyle Cordes 对这个视频中的内容做了介绍。里面有不少技术性的内容。值得分享一下。(Kyle Cordes 的介绍是本文的主要来源)</p>
 <p>简单的说 YouTube 的数据流量, &quot;一天的YouTube流量相当于发送750亿封电子邮件.&quot;, 2006 年中就有消息说每日 PV 超过 1 亿,现在? 更夸张了,&quot;每天有10亿次下载以及6,5000次上传&quot;, 真假姑且不论, 的确是超乎寻常的海量. 国内的互联网应用,但从数据量来看,怕是只有 51.com 有这个规模. 但技术上和 YouTube 就没法子比了.</p>
@@ -81,14 +81,14 @@ author:
 <p>最初的 DB 只有 10 块硬盘，RAID 10 ，后来追加了一组 RAID 1。够省的。这一波 Web 2.0 公司很少有用 Oracle 的(我知道的只有 Bebo,参见这里). 在扩展性方面，路线也是和其他站点类似，复制，分散 IO。最终的解决之道是&quot;分区&quot;,这个不是数据库层面的表分区，而是业务层面的分区(在用户名字或者 ID 上做文章,应用程序控制查找机制)</p>
 <p>YouTube 也用 Memcached.</p>
 <p>很想了解一下国内 Web 2.0 网站的数据信息,有谁可以提供一点 ?</p>
-<h6><a href="http://www.8211.cn/"><u>四、 mixi.jp </u></a>：使用开源软件搭建的可扩展SNS网站</h6>
+<h6><u>四、 mixi.jp </u></a>：使用开源软件搭建的可扩展SNS网站</h6>
 <p>Mixi 目前是日本排名第三的网站，全球排名42，主要提供SNS服务：日记，群组，站内消息，评论，相册等等，是日本最大的SNS网站。Mixi从2003年 12月份开始开发，由现在它的CTO - Batara Kesuma一个人焊，焊了四个月，在2004年2月份开始上线运行。两个月后就注册了1w用户，日访问量60wPV。在随后的一年里，用户增长到了 21w，第二年，增长到了200w。到今年四月份已经增长到370w注册用户，并且还在以每天1.5w人的注册量增长。这些用户中70%是活跃用户（活跃用户：三天内至少登录一次的用户），平均每个用户每周在线时间为将近3个半小时。</p>
 <p>下面我们来看它的技术架构。Mixi采用开源软件作为架构的基础：Linux 2.6，Apache 2.0，MySQL，Perl 5.8，memcached，Squid等等。到目前为止已经有100多台MySQL数据库服务器，并且在以每月10多台的速度增长。Mixi的数据库连接方式采用的是每次查询都进行连接，而不是持久连接。数据库大多数是以InnoDB方式运行。Mixi解决扩展问题主要依赖于对数据库的切分。</p>
 <p>首先进行垂直切分，按照表的内容将不同的表划分到不同的数据库中。然后是水平切分，根据用户的ID将不同用户的内容再划分的不同的数据库中，这是比较通常的做法，也很管用。划分的关键还是在于应用中的实现，需要将操作封装在在数据层，而尽量不影响业务层。当然完全不改变逻辑层也不可能，这时候最能检验以前的设计是否到位，如果以前设计的不错，那创建连接的时候传个表名，用户ID进去差不多就解决问题了，而以前如果sql代码到处飞，或者数据层封装的不太好的话那就累了。</p>
 <p>这样做了以后并不能从根本上解决问题，尤其是对于像mixi这种SNS网站，页面上往往需要引用大量的用户信息，好友信息，图片，文章信息，跨表，跨库操作相当多。这个时候就需要发挥memcached的作用了，用大内存把这些不变的数据全都缓存起来，而当修改时就通知cache过期，这样应用层基本上就可以解决大部分问题了，只会有很小一部分请求穿透应用层，用到数据库。Mixi的经验是平均每个页面的加载时间在0.02秒左右（当然根据页面大小情况不尽相似），可以说明这种做法是行之有效的。Mixi一共在32台机器上有缓存服务器，每个Cache Server 2G内存，这些Cache Server与App Server装在一起。因为Cache Server对CPU消耗不大，而有了Cache Server的支援，App Server对内存要求也不是太高，所以可以和平共处，更有效的利用资源。</p>
 <p>图片的处理就显得相对简单的多了。对于mixi而言，图像主要有两部分：一部分是经常要使用到的，像用户头像，群组的头像等等，大概有100多GB，它们被 Squid和CDN所缓存，命中率相对比较高；另一部分是用户上传的大量照片，它们的个体访问量相对而言比较小，命中率也比较低，使用Cache不划算，所以对于这些照片的策略是直接在用户上传的时候分发到到图片存储服务器上，在用户访问的时候直接进行访问，当然图片的位置需要在数据库中进行记录，不然找不到放在哪台服务器上就郁闷了。</p>
-<h6><a href="http://www.8211.cn/"><u>五、 Technorati </u></a>的后台数据库架构</h6>
-<p><a href="http://www.8211.cn/"><u>Technorati </u></a>(现在被阻尼了, 可能你访问不了)的 <a href="http://www.8211.cn/"><u>Dorion Carroll </u></a>在 <a href="http://www.8211.cn/"><u>2006 MySQL 用户会议 </u></a>上介绍了一些关于 Technorati 后台数据库架构的情况.</p>
+<h6><u>五、 Technorati </u></a>的后台数据库架构</h6>
+<p><u>Technorati </u></a>(现在被阻尼了, 可能你访问不了)的 <u>Dorion Carroll </u></a>在 <u>2006 MySQL 用户会议 </u></a>上介绍了一些关于 Technorati 后台数据库架构的情况.</p>
 <p><b>基本情况</b></p>
 <p>目前处理着大约 10Tb 核心数据, 分布在大约 20 台机器上.通过复制, 多增加了 100Tb 数据, 分布在 200 台机器上. 每天增长的数据 1TB. 通过 SOA 的运用, 物理与逻辑的访问相隔离, 似乎消除了数据库的瓶颈. 值得一提的是, 该扩展过程始终是利用普通的硬件与开源软件来完成的. 毕竟 , Web 2.0 站点都不是烧钱的主. 从数据量来看，这绝对是一个相对比较大的 Web 2.0 应用.</p>
 <p>Tag 是 Technorati 最为重要的数据元素. 爆炸性的 Tag 增长给 Technorati 带来了不小的挑战.</p>
@@ -100,8 +100,8 @@ author:
 <p>InnoDB 用于数据完整性/写性能要求比较高的应用. MyISAM 适合进行 OLAP 运算. 物尽其用.</p>
 <p>3) <b>MySQL</b> <b>复制</b></p>
 <p>复制数据到从主数据库到辅数据库上,平衡分布查询与异步计算, 另外一个功能是提供冗余</p>
-<p><a href="http://www.8211.cn/"><u>可以看一下，书客网www.8211.cn</u></a></p>
-<p><a href="http://www.8211.cn/"><u>六、 通过了解MySpace </u></a>的六次重构经历,来认识分布式系统到底该如何创建.</p>
+<p><u>可以看一下，书客网www.8211.cn</u></a></p>
+<p><u>六、 通过了解MySpace </u></a>的六次重构经历,来认识分布式系统到底该如何创建.</p>
 <p>在每个里程碑，站点负担都会超过底层系统部分组件的最大载荷，特别是数据库和存储系统。接着，功能出现问题，用户失声尖叫。最后，技术团队必须为此修订系统策略。</p>
 <p> 虽然自2005年早期，站点账户数超过7百万后，系统架构到目前为止保持了相对稳定，但MySpace仍然在为SQL Server支持的同时连接数等方面继续攻坚，Benedetto说，&quot;我们已经尽可能把事情做到最好&quot;。</p>
 <p><b>1.</b> <b>里程碑一：50</b> <b>万账户</b></p>
@@ -156,8 +156,8 @@ author:
 <p> 换句话说，MySpace的偶发故障可能造成某人最后更新的个人资料丢失，但并不意味着网站弄丢了用户的钱财。&quot;关键是要认识到，与保证站点性能相比，丢失少许数据的故障是可接受的。&quot;Benedetto说。所以，MySpace甘冒丢失2分钟到2小时内任意点数据的危险，在SQL Server配置里延长了&quot;checkpoint&quot;操作--它将待更新数据永久记录到磁盘--的间隔时间，因为这样做可以加快数据库的运行。</p>
 <p>Benedetto 说，同样，开发人员还经常在几个小时内就完成构思、编码、测试和发布全过程。这有引入Bug的风险，但这样做可以更快实现新功能。而且，因为进行大规模真实测试不具可行性，他们的测试通常是在仅以部分活跃用户为对象，且用户对软件新功能和改进不知就里的情况下进行的。因为事实上不可能做真实的加载测试，他们做的测试通常都是针对站点。</p>
 <p>&quot;我们犯过大量错误，&quot;Benedetto说，&quot;但到头来，我认为我们做对的还是比做错的多。&quot;</p>
-<h6><a href="http://www.8211.cn/"><u>七、 从LiveJournal </u></a>后台发展看大规模网站性能优化方法</h6>
-<p><a href="http://www.8211.cn/"><u>LiveJournal </u></a>是99年始于校园中的项目，几个人出于爱好做了这样一个应用，以实现以下功能：</p>
+<h6><u>七、 从LiveJournal </u></a>后台发展看大规模网站性能优化方法</h6>
+<p><u>LiveJournal </u></a>是99年始于校园中的项目，几个人出于爱好做了这样一个应用，以实现以下功能：</p>
 <ul>
 <li>博客，论坛</li>
 <li>社会性网络，找到朋友</li>
@@ -177,7 +177,7 @@ author:
 <p><a href="http://byfiles.storage.msn.com/y1pLfC-bv1f71Ng8NRsPI0kDc-Ikh9MpNQsQdk2hWYZj7EqSGMNCdy6_L0NCqVwf4Kdouk7Yyd1I7M"><u>       <br /></u></a></p>
 <p><b>三、从LiveJournal</b> <b>发展中学习</b></p>
 <p>LiveJournal从1台服务器发展到100台服务器，这其中经历了无数的伤痛，但同时也摸索出了解决这些问题的方法，通过对LiveJournal的学习，可以让我们避免LJ曾经犯过的错误，并且从一开始就对系统进行良好的设计，以避免后期的痛苦。</p>
-<p>下面我们一步一步看LJ发展的脚步。 <a href="http://www.8211.cn/"><u>计算机电子书</u></a></p>
+<p>下面我们一步一步看LJ发展的脚步。 <u>计算机电子书</u></a></p>
 <p><b>1</b> <b>、一台服务器</b></p>
 <p>一台别人捐助的服务器，LJ最初就跑在上面，就像Google开始时候用的破服务器一样，值得我们尊敬。这个阶段，LJ的人以惊人的速度熟悉的Unix的操作管理，服务器性能出现过问题，不过还好，可以通过一些小修小改应付过去。在这个阶段里LJ把CGI升级到了FastCGI。</p>
 <p>最终问题出现了，网站越来越慢，已经无法通过优过化来解决的地步，需要更多的服务器，这时LJ开始提供付费服务，可能是想通过这些钱来购买新的服务器，以解决当时的困境。</p>
@@ -218,7 +218,7 @@ author:
 <p><b>6</b> <b>、现在我们在哪里：</b></p>
 <p><a href="http://byfiles.storage.msn.com/y1pLfC-bv1f71P3I0DKW-AYfsw9T4JlR-Ln3M8GJI3Mta9xvoKJ93LBpylAlMTlVU5v8gkKbVVExSU"><u>       <br /></u></a></p>
 <p>现在服务器基本上够了，但性能还是有问题，原因出在架构上。</p>
-<p>数据库的架构是最大的问题。由于增加的数据库都是以Slave模式添加到应用内，这样唯一的好处就是将读操作分布到了多台机器，但这样带来的后果就是写操作被大量分发，每台机器都要执行，服务器越多，浪费就越大，随着写操作的增加，用于服务读操作的资源越来越少。 <a href="http://www.8211.cn/"><u>计算机电子书</u></a></p>
+<p>数据库的架构是最大的问题。由于增加的数据库都是以Slave模式添加到应用内，这样唯一的好处就是将读操作分布到了多台机器，但这样带来的后果就是写操作被大量分发，每台机器都要执行，服务器越多，浪费就越大，随着写操作的增加，用于服务读操作的资源越来越少。 <u>计算机电子书</u></a></p>
 <p><a href="http://byfiles.storage.msn.com/y1pLfC-bv1f71MPya6rCW77VuC79TgWb_o4GOMvkefOyFMYGGKSUVWUw4MZCKw4rMtdIB1VRPgpQKg"><u>       <br /></u></a></p>
 <p>由一台分布到两台</p>
 <p><a href="http://byfiles.storage.msn.com/y1pLfC-bv1f71ML3RaIG8BvZTf5z0i_5ooooXQ0mQ6Qh4RD1iaj-qP0hY8b1ffaQKnVtz-kjhV42RM"><u>       <br /></u></a></p>
@@ -232,7 +232,7 @@ author:
 <p>在具体的实现时需要注意几个问题：</p>
 <ul>
 <li>在数据库组内不要使用自增ID，以便于以后在数据库组之间迁移用户，以实现更合理的I/O，磁盘空间及负载分布。</li>
-<li>将userid，postid存储在全局服务器上，可以使用自增，数据库组中的相应值必须以全局服务器上的值为准。全局服务器上使用事务型数据库InnoDB。<a href="http://www.8211.cn/"><u>计算机电子书</u></a></li>
+<li>将userid，postid存储在全局服务器上，可以使用自增，数据库组中的相应值必须以全局服务器上的值为准。全局服务器上使用事务型数据库InnoDB。<u>计算机电子书</u></a></li>
 <li>在数据库组之间迁移用户时要万分小心，当迁移时用户不能有写操作。</li>
 </ul>
 <p><b>7</b> <b>、现在我们在哪里</b></p>
@@ -271,7 +271,7 @@ author:
 <li>MySQL非正常关闭或死机时会导致索引错误，需要使用myisamchk修复，而且当访问量大时出现非常频繁。</li>
 </ul>
 <p><b>9</b> <b>、缓存</b></p>
-<p>去年我写过<a href="http://www.8211.cn/"><u>一篇文章介绍memcached </u></a>，它就是由LJ的团队开发的一款缓存工具，以key-value的方式将数据存储到分布的内存中。LJ缓存的数据：</p>
+<p>去年我写过<u>一篇文章介绍memcached </u></a>，它就是由LJ的团队开发的一款缓存工具，以key-value的方式将数据存储到分布的内存中。LJ缓存的数据：</p>
 <ul>
 <li>12台独立服务器（不是捐赠的）</li>
 <li>28个实例</li>
@@ -279,7 +279,7 @@ author:
 <li>90-93%的命中率（用过squid的人可能知道，squid内存加磁盘的命中率大概在70-80%）</li>
 </ul>
 <p>如何建立缓存策略？</p>
-<p>想缓存所有的东西？那是不可能的，我们只需要缓存已经或者可能导致系统瓶颈的地方，最大程度的提交系统运行效率。通过对MySQL的日志的分析我们可以找到缓存的对象。 <a href="http://www.8211.cn/"><u>计算机电子书</u></a></p>
+<p>想缓存所有的东西？那是不可能的，我们只需要缓存已经或者可能导致系统瓶颈的地方，最大程度的提交系统运行效率。通过对MySQL的日志的分析我们可以找到缓存的对象。 <u>计算机电子书</u></a></p>
 <p>缓存的缺点？</p>
 <ul>
 <li>没有完美的事物，缓存也有缺点：</li>
@@ -289,7 +289,7 @@ author:
 </ul>
 <p><b>10</b> <b>、Web</b> <b>访问负载均衡</b></p>
 <p>在数据包级别使用BIG-IP，但BIG-IP并不知道我们内部的处理机制，无法判断由哪台服务器对这些请求进行处理。反向代理并不能很好的起到作用，不是已经够快了，就是达不到我们想要的效果。</p>
-<p>所以，LJ又开发了<a href="http://www.8211.cn/"><u>Perlbal </u></a>。特点：</p>
+<p>所以，LJ又开发了<u>Perlbal </u></a>。特点：</p>
 <ul>
 <li>快，小，可管理的http web 服务器/代理</li>
 <li>可以在内部进行转发</li>
@@ -300,7 +300,7 @@ author:
 <li>支持插件：GIF/PNG互换？</li>
 </ul>
 <p><b>11</b> <b>、MogileFS</b></p>
-<p>LJ使用开源的<a href="http://www.8211.cn/"><u>MogileFS </u></a>作为分布式文件存储系统。MogileFS使用非常简单，它的主要设计思想是：</p>
+<p>LJ使用开源的<u>MogileFS </u></a>作为分布式文件存储系统。MogileFS使用非常简单，它的主要设计思想是：</p>
 <ul>
 <li>文件属于类（类是最小的复制单位）</li>
 <li>跟踪文件存储位置</li>
@@ -308,12 +308,12 @@ author:
 <li>使用MySQL集群统一存储分布信息</li>
 <li>大容易廉价磁盘</li>
 </ul>
-<p>到目前为止就这么多了，更多文档可以在<a href="http://www.8211.cn/"><u>http://www.danga.com/words/ </u></a>找到。<a href="http://www.8211.cn/"><u>Danga.com </u></a>和<a href="http://www.8211.cn/"><u>LiveJournal.com </u></a>的同学们拿这个文档参加了两次MySQL Con，两次OS Con，以及众多的其它会议，无私的把他们的经验分享出来，值得我们学习。在web2.0时代快速开发得到大家越来越多的重视，但良好的设计仍是每一个应用的基础，希望web2.0们在成长为Top500网站的路上，不要因为架构阻碍了网站的发展。 <a href="http://www.8211.cn/"><u>计算机电子书</u></a></p>
-<h6><a href="http://www.8211.cn/"><u><b>八、</b> <b>说说大型高并发高负载网站的系统架构</b></u></a></h6>
+<p>到目前为止就这么多了，更多文档可以在<u>http://www.danga.com/words/ </u></a>找到。<u>Danga.com </u></a>和<u>LiveJournal.com </u></a>的同学们拿这个文档参加了两次MySQL Con，两次OS Con，以及众多的其它会议，无私的把他们的经验分享出来，值得我们学习。在web2.0时代快速开发得到大家越来越多的重视，但良好的设计仍是每一个应用的基础，希望web2.0们在成长为Top500网站的路上，不要因为架构阻碍了网站的发展。 <u>计算机电子书</u></a></p>
+<h6><u><b>八、</b> <b>说说大型高并发高负载网站的系统架构</b></u></a></h6>
 <p>我在Cernet做过拨号接入平台的搭建，而后在Yahoo3721负载搜索引擎前端平台开发，又在猫扑处理过大型社区猫扑大杂烩的架构升级等工作，同时自己接触和开发过不少大中型网站的模块，因此在大型网站应对高负载和并发的解决方案上有一些积累和经验，可以和大家一起探讨一下。</p>
 <p>一个小型的网站，比如个人网站，可以使用最简单的html静态页面就实现了，配合一些图片达到美化效果，所有的页面均存放在一个目录下，这样的网站对系统架构、性能的要求都很简单，随着互联网业务的不断丰富，网站相关的技术经过这些年的发展，已经细分到很细的方方面面，尤其对于大型网站来说，所采用的技术更是涉及面非常广，从硬件到软件、编程语言、数据库、WebServer、防火墙等各个领域都有了很高的要求，已经不是原来简单的html静态网站所能比拟的。</p>
 <p>大型网站，比如门户网站。在面对大量用户访问、高并发请求方面，基本的解决方案集中在这样几个环节：使用高性能的服务器、高性能的数据库、高效率的编程语言、还有高性能的Web容器。但是除了这几个方面，还没法根本解决大型网站面临的高负载和高并发问题。</p>
-<p>上面提供的几个解决思路在一定程度上也意味着更大的投入，并且这样的解决思路具备瓶颈，没有很好的扩展性，下面我从低成本、高性能和高扩张性的角度来说说我的一些经验。 <a href="http://www.8211.cn/"><u>计算机电子书</u></a></p>
+<p>上面提供的几个解决思路在一定程度上也意味着更大的投入，并且这样的解决思路具备瓶颈，没有很好的扩展性，下面我从低成本、高性能和高扩张性的角度来说说我的一些经验。 <u>计算机电子书</u></a></p>
 <p>1、HTML静态化</p>
 <p>其实大家都知道，效率最高、消耗最小的就是纯静态化的html页面，所以我们尽可能使我们的网站上的页面采用静态页面来实现，这个最简单的方法其实也是最有效的方法。但是对于大量内容并且频繁更新的网站，我们无法全部手动去挨个实现，于是出现了我们常见的信息发布系统CMS，像我们常访问的各个门户站点的新闻频道，甚至他们的其他频道，都是通过信息发布系统来管理和实现的，信息发布系统可以实现最简单的信息录入自动生成静态页面，还能具备频道管理、权限管理、自动抓取等功能，对于一个大型网站来说，拥有一套高效、可管理的CMS是必不可少的。</p>
 <p>除了门户和信息发布类型的网站，对于交互性要求很高的社区类型网站来说，尽可能的静态化也是提高性能的必要手段，将社区内的帖子、文章进行实时的静态化，有更新的时候再重新静态化也是大量使用的策略，像Mop的大杂烩就是使用了这样的策略，网易社区等也是如此。</p>
@@ -323,7 +323,7 @@ author:
 <p>3、数据库集群和库表散列</p>
 <p>大型网站都有复杂的应用，这些应用必须使用数据库，那么在面对大量访问的时候，数据库的瓶颈很快就能显现出来，这时一台数据库将很快无法满足应用，于是我们需要使用数据库集群或者库表散列。</p>
 <p>在数据库集群方面，很多数据库都有自己的解决方案，Oracle、Sybase等都有很好的方案，常用的MySQL提供的Master/Slave也是类似的方案，您使用了什么样的DB，就参考相应的解决方案来实施即可。</p>
-<p>上面提到的数据库集群由于在架构、成本、扩张性方面都会受到所采用DB类型的限制，于是我们需要从应用程序的角度来考虑改善系统架构，库表散列是常用并且最有效的解决方案。我们在应用程序中安装业务和应用或者功能模块将数据库进行分离，不同的模块对应不同的数据库或者表，再按照一定的策略对某个页面或者功能进行更小的数据库散列，比如用户表，按照用户ID进行表散列，这样就能够低成本的提升系统的性能并且有很好的扩展性。sohu的论坛就是采用了这样的架构，将论坛的用户、设置、帖子等信息进行数据库分离，然后对帖子、用户按照板块和ID进行散列数据库和表，最终可以在配置文件中进行简单的配置便能让系统随时增加一台低成本的数据库进来补充系统性能。 <a href="http://www.8211.cn/"><u>计算机电子书</u></a></p>
+<p>上面提到的数据库集群由于在架构、成本、扩张性方面都会受到所采用DB类型的限制，于是我们需要从应用程序的角度来考虑改善系统架构，库表散列是常用并且最有效的解决方案。我们在应用程序中安装业务和应用或者功能模块将数据库进行分离，不同的模块对应不同的数据库或者表，再按照一定的策略对某个页面或者功能进行更小的数据库散列，比如用户表，按照用户ID进行表散列，这样就能够低成本的提升系统的性能并且有很好的扩展性。sohu的论坛就是采用了这样的架构，将论坛的用户、设置、帖子等信息进行数据库分离，然后对帖子、用户按照板块和ID进行散列数据库和表，最终可以在配置文件中进行简单的配置便能让系统随时增加一台低成本的数据库进来补充系统性能。 <u>计算机电子书</u></a></p>
 <p>4、缓存</p>
 <p>缓存一词搞技术的都接触过，很多地方用到缓存。网站架构和网站开发中的缓存也是非常重要。这里先讲述最基本的两种缓存。高级和分布式的缓存在后面讲述。</p>
 <p>架构方面的缓存，对Apache比较熟悉的人都能知道Apache提供了自己的缓存模块，也可以使用外加的Squid模块进行缓存，这两种方式均可以有效的提高Apache的访问响应能力。</p>
@@ -341,6 +341,6 @@ author:
 <ul>
 <li>软件四层交换</li>
 </ul>
-<p>大家知道了硬件四层交换机的原理后，基于OSI模型来实现的软件四层交换也就应运而生，这样的解决方案实现的原理一致，不过性能稍差。但是满足一定量的压力还是游刃有余的，有人说软件实现方式其实更灵活，处理能力完全看你配置的熟悉能力。<a href="http://www.8211.cn/"><u>计算机电子书</u></a></p>
+<p>大家知道了硬件四层交换机的原理后，基于OSI模型来实现的软件四层交换也就应运而生，这样的解决方案实现的原理一致，不过性能稍差。但是满足一定量的压力还是游刃有余的，有人说软件实现方式其实更灵活，处理能力完全看你配置的熟悉能力。<u>计算机电子书</u></a></p>
 <p>软件四层交换我们可以使用Linux上常用的LVS来解决，LVS就是Linux Virtual Server，他提供了基于心跳线heartbeat的实时灾难应对解决方案，提高系统的鲁棒性，同时可供了灵活的虚拟VIP配置和管理功能，可以同时满足多种应用需求，这对于分布式的系统来说必不可少。</p>
 <p>一个典型的使用负载均衡的策略就是，在软件或者硬件四层交换的基础上搭建<a href="http://zh.wikipedia.org/wiki/Squid_cache">squid集群</a>，这种思路在很多大型网站包括搜索引擎上被采用，这样的架构低成本、高性能还有很强的扩张性，随时往架构里面增减节点都非常容易。这样的架构我准备空了专门详细整理一下和大家探讨</p>
