try to resolve a old url 596.html to https://blog.kazge.com/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%9F%BA%E7%A1%80/2011/10/21/io-e6-8e-a5-e5-8f-a3-ef-bc-8c-e8-ae-be-e5-a4-87-ef-bc-8c-e6-93-8d-e4-bd-9c/

--- a/_posts/2011-11-02-jdk7jdbc4servlet3-0.html
+++ b/_posts/2011-11-02-jdk7jdbc4servlet3-0.html
@@ -41,7 +41,7 @@ author:
 <ul>
 <li>servlet3.0新特性: <a href="http://www.ibm.com/developerworks/cn/java/j-lo-servlet30/index.html?ca=drs-cn-0423">http://www.ibm.com/developerworks/cn/java/j-lo-servlet30/index.html?ca=drs-cn-0423</a> </li>
 </ul>
-<p>异步处理支持 <font color="#0000ff">还可以，参见异步io:<a title="http://kazge.com/archives/596.html" href="http://kazge.com/archives/596.html">http://kazge.com/archives/596.html</a> 以及<a title="http://www.ibm.com/developerworks/cn/java/j-nioserver/" href="http://www.ibm.com/developerworks/cn/java/j-nioserver/">http://www.ibm.com/developerworks/cn/java/j-nioserver/</a> 如果是使用nio实现的话，倒更像多路io。</font></p>
+<p>异步处理支持 <font color="#0000ff">还可以，参见异步io:https://blog.kazge.com/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%9F%BA%E7%A1%80/2011/10/21/io-e6-8e-a5-e5-8f-a3-ef-bc-8c-e8-ae-be-e5-a4-87-ef-bc-8c-e6-93-8d-e4-bd-9c/ 以及<a title="http://www.ibm.com/developerworks/cn/java/j-nioserver/" href="http://www.ibm.com/developerworks/cn/java/j-nioserver/">http://www.ibm.com/developerworks/cn/java/j-nioserver/</a> 如果是使用nio实现的话，倒更像多路io。</font></p>
 <p><font color="#0000ff"></font></p>
 <p>一个简单的模拟异步处理的 Servlet 示例如下：</p>
 <div>
