md in html not work, paste link directly

--- a/_posts/2011-06-09-nio-%e5%92%8c-web-%e7%ba%bf%e7%a8%8b.html
+++ b/_posts/2011-06-09-nio-%e5%92%8c-web-%e7%ba%bf%e7%a8%8b.html
@@ -23,4 +23,4 @@ author:
 <p>再看 <a href="http://www.ibm.com/developerworks/cn/java/j-nioserver/" target="_blank">http://www.ibm.com/developerworks/cn/java/j-nioserver/</a></p>
 <p>看看 <a title="http://zddava.iteye.com/blog/835244" href="http://zddava.iteye.com/blog/835244">http://zddava.iteye.com/blog/835244</a></p>
 <p><strike>综上所述，我认为nio并不能对web 服务器性能提高很大因为每个servlet还是一个线程，这样与没有使用nio的情况是一样的。??</strike></p>
-<p>现在看看[IO 接口，设备]({{ site.baseurl }}{% post_url 2011-06-09-nio-%e5%92%8c-web-%e7%ba%bf%e7%a8%8b %})，这篇文章分析的比较细。nio跟更像是多路io,性能还是能够提升的！</p>
+<p>现在看看[IO 接口，设备](https://blog.kazge.com/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%9F%BA%E7%A1%80/2011/10/21/io-e6-8e-a5-e5-8f-a3-ef-bc-8c-e8-ae-be-e5-a4-87-ef-bc-8c-e6-93-8d-e4-bd-9c/），这篇文章分析的比较细。nio跟更像是多路io,性能还是能够提升的！</p>
