--- a/_posts/2011-06-10-在ie下，button-标记恐怕还存在几个不大不小的问题。.html
+++ b/_posts/2011-06-10-在ie下，button-标记恐怕还存在几个不大不小的问题。.html
@@ -1,22 +1,22 @@
 ---
 layout: post
-title: "在ie下，<button>标记恐怕还存在几个不大不小的问题。"
-date: 2011-06-10 17:03:22.000000000 +01:00
+title: 在ie下，button 标记恐怕还存在几个不大不小的问题。
+date: 2011-06-10 16:03:00
 type: post
 published: true
 status: publish
 categories:
-- Web前端
+  - Web前端
 tags:
-- javascript web 前端
+  - javascript web 前端
 meta:
   views: '53'
 author:
   login: ig2net
   email: ig2net@ig2net.info
-  display_name: "农夫一号"
-  first_name: ''
-  last_name: ''
+  display_name: 农夫一号
+  first_name:
+  last_name:
 ---
 <p style="margin-left: 0px;margin-right: 0px"><font size="3">在ie下，&lt;button&gt;标记恐怕还存在几个不大不小的问题。</font></p>
 <ol style="margin-left: 2em;margin-right: 0px">
