areo egg android

--- a/show/index.html
+++ b/show/index.html
@@ -1,8 +1,8 @@
---- 
-layout: base 
-title: Projects 
-menu: true 
-order: 1 
+---
+layout: base
+title: Projects
+menu: true
+order: 1
 ---
 
 
@@ -44,8 +44,11 @@ order: 1
 
 				<p>
 					My Third Indie Game:
-					<li>Based on Unity2D
-						<li><a href="https://itunes.apple.com/us/app/volitant-egg-ads-version/id1247264387?mt=8">Available In App Store</a>
+					<li>Based on Unity2D</li>
+					<li><a href="https://itunes.apple.com/us/app/volitant-egg-ads-version/id1247264387?mt=8">Available
+							In App Store</a></li>
+					<li><a href="./volitantegg/AreoEgg.apk">android - english</a></li>
+					<li><a href="./volitantegg/飞翔的鸡蛋.apk">安卓 - 中文</a></li>
 				</p>
 			</div>
 		</div>
@@ -57,7 +60,8 @@ order: 1
 
 		<div class="article" id="article1">
 			<h2>
-				<a href="https://itunes.apple.com/us/app/mouse-bee-and-elephant/id1173416239">Indie 2D Mobile Game: Mouse Bee and Elephant</a>
+				<a href="https://itunes.apple.com/us/app/mouse-bee-and-elephant/id1173416239">Indie 2D Mobile Game:
+					Mouse Bee and Elephant</a>
 				<small class="post-date heading"><time>2016</time></small>
 			</h2>
 
@@ -71,8 +75,10 @@ order: 1
 				<p>
 					My Second Indie Game:
 					<li>Based on Unity2D
-						<li><a href="https://itunes.apple.com/us/app/mouse-bee-and-elephant/id1173416239">Available In App Store</a>
-							<li><a href="https://play.google.com/store/apps/details?id=com.kazgame.MouseBeeElephant">Available In Goole Play</a>
+					<li><a href="https://itunes.apple.com/us/app/mouse-bee-and-elephant/id1173416239">Available In App
+							Store</a>
+					<li><a href="https://play.google.com/store/apps/details?id=com.kazgame.MouseBeeElephant">Available
+							In Goole Play</a>
 				</p>
 			</div>
 		</div>
@@ -98,8 +104,9 @@ order: 1
 				<p>
 					My First Indie Game:
 					<li>Based on Unity2D
-						<li><a href="https://itunes.apple.com/us/app/karaok-kong/id1121909774">Available In App Store</a>
-							<li><a href="https://play.google.com/store/apps/details?id=com.jikastudio.KaraokKong">Available In Goole Play</a>
+					<li><a href="https://itunes.apple.com/us/app/karaok-kong/id1121909774">Available In App Store</a>
+					<li><a href="https://play.google.com/store/apps/details?id=com.jikastudio.KaraokKong">Available In
+							Goole Play</a>
 				</p>
 			</div>
 		</div>
@@ -125,9 +132,9 @@ order: 1
 				<p>
 					In MobileChat, You can:
 					<li>Talk via call from the web
-						<li>Talk via a normal phone
-							<li>Talk via sms
-								<li>See history in realtime
+					<li>Talk via a normal phone
+					<li>Talk via sms
+					<li>See history in realtime
 				</p>
 			</div>
 		</div>
@@ -154,10 +161,10 @@ order: 1
 				<p>
 					With Webphone, You can:
 					<li>Call from the web
-						<li>Receive call from the real phone
-							<li>Send SMS message from the web
-								<li>Receive SMS message from real phone
-									<li>Chat with gtalk, jabber etc. account
+					<li>Receive call from the real phone
+					<li>Send SMS message from the web
+					<li>Receive SMS message from real phone
+					<li>Chat with gtalk, jabber etc. account
 				</p>
 			</div>
 		</div>
@@ -234,7 +241,8 @@ order: 1
 				</div>
 
 				<p>
-					You can write article with word suggestion, This show you how easy to write a "fashion" article. Try to type some words!
+					You can write article with word suggestion, This show you how easy to write a "fashion" article. Try
+					to type some words!
 				</p>
 			</div>
 		</div>
@@ -358,7 +366,8 @@ order: 1
 				</div>
 
 				<p>
-					Normal Distribution Curve also know as Bell Curve, this demo let you to use the three control line in the chart to select
+					Normal Distribution Curve also know as Bell Curve, this demo let you to use the three control line
+					in the chart to select
 					Median and selected area.
 				</p>
 			</div>
@@ -389,24 +398,28 @@ order: 1
 					Zkjs is a opensource project that contains serveral Javascript components:
 					<ul>
 						<li>
-							Dropdownlist(or say select, or say combobox), with the feature of searchable, editable, it is powerful.
+							Dropdownlist(or say select, or say combobox), with the feature of searchable, editable, it
+							is powerful.
 						</li>
 						<li>
-							Calendar also use the dropdownlist to select its year and month,it can choose hour and time if you set the datepatther with
+							Calendar also use the dropdownlist to select its year and month,it can choose hour and time
+							if you set the datepatther with
 							hours and minutes.
 						</li>
 						<li>
 							Infinite series popupmenu.
 						</li>
 						<li>
-							Powerful and easy-use tree, support radio node and checkbox node. you can extend them also. it has a better performance than
+							Powerful and easy-use tree, support radio node and checkbox node. you can extend them also.
+							it has a better performance than
 							most of the other opensource tree.
 						</li>
 					</ul>
 				</p>
 
 				<p>
-					These components is for the good of ajax, they are event-driven, all this work fine in firefox, chrome, safari and IE.
+					These components is for the good of ajax, they are event-driven, all this work fine in firefox,
+					chrome, safari and IE.
 				</p>
 
 				<p>
@@ -435,21 +448,22 @@ order: 1
 				</div>
 
 				<p>
-					A simple web framework for java, with flexible and dynamic feature, it is somewhat like asp.net, the core idea is simple
+					A simple web framework for java, with flexible and dynamic feature, it is somewhat like asp.net, the
+					core idea is simple
 					and pure, you can handle it go-as-you-please！
 					<ul>
 						<li>
 							You can composite component with your custom components.
-							<li>
-								You can develop custom component with plain html template.
-								<li>
-									You can use component like a html tag.
-									<li>
-										Less code with more resuing.
-										<li>
-											Less Configuration, far light than jsf.
-											<li>
-												Drain advantages from asp.net and tapestry.
+						<li>
+							You can develop custom component with plain html template.
+						<li>
+							You can use component like a html tag.
+						<li>
+							Less code with more resuing.
+						<li>
+							Less Configuration, far light than jsf.
+						<li>
+							Drain advantages from asp.net and tapestry.
 					</ul>
 				</p>
 			</div>
@@ -476,7 +490,8 @@ order: 1
 				</div>
 
 				<p>
-					Supply a jni library of the unrar in the windows-32 platform. You can unpackage rar format file with pure java api. But this
+					Supply a jni library of the unrar in the windows-32 platform. You can unpackage rar format file with
+					pure java api. But this
 					only support windows PC.
 				</p>
 			</div>
@@ -511,17 +526,17 @@ order: 1
 
 		var ls = [];
 
-{% assign tags_list = site.categories %}  
-  {% if tags_list.first[0] == null %}
-    {% for tag in tags_list %} 
+		{% assign tags_list = site.categories %}
+		{% if tags_list.first[0] == null %}
+		{% for tag in tags_list %}
 		ls.push({ "name": "{{ tag }}", "url": "{{site.url}}/categories#{{ tag }}-ref" });
-    {% endfor %}
-  {% else %}
-    {% for tag in tags_list %} 
-	ls.push({ "name": "{{ tag[0] }}", "url": "{{site.url}}/categories#{{ tag[0] }}-ref" });
-    {% endfor %}
-  {% endif %}
-{% assign tags_list = nil %}
+		{% endfor %}
+		{% else %}
+		{% for tag in tags_list %}
+		ls.push({ "name": "{{ tag[0] }}", "url": "{{site.url}}/categories#{{ tag[0] }}-ref" });
+		{% endfor %}
+		{% endif %}
+		{% assign tags_list = nil %}
 
 		catanima.draw(r, ls);
 	})();
