--- a/show/index.html
+++ b/show/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 title: Projects
-menu: true
+menu: false
 order: 1
 ---
 
@@ -396,25 +396,25 @@ order: 1
 				</div>
 				<p>
 					Zkjs is a opensource project that contains serveral Javascript components:
-					<ul>
-						<li>
-							Dropdownlist(or say select, or say combobox), with the feature of searchable, editable, it
-							is powerful.
-						</li>
-						<li>
-							Calendar also use the dropdownlist to select its year and month,it can choose hour and time
-							if you set the datepatther with
-							hours and minutes.
-						</li>
-						<li>
-							Infinite series popupmenu.
-						</li>
-						<li>
-							Powerful and easy-use tree, support radio node and checkbox node. you can extend them also.
-							it has a better performance than
-							most of the other opensource tree.
-						</li>
-					</ul>
+				<ul>
+					<li>
+						Dropdownlist(or say select, or say combobox), with the feature of searchable, editable, it
+						is powerful.
+					</li>
+					<li>
+						Calendar also use the dropdownlist to select its year and month,it can choose hour and time
+						if you set the datepatther with
+						hours and minutes.
+					</li>
+					<li>
+						Infinite series popupmenu.
+					</li>
+					<li>
+						Powerful and easy-use tree, support radio node and checkbox node. you can extend them also.
+						it has a better performance than
+						most of the other opensource tree.
+					</li>
+				</ul>
 				</p>
 
 				<p>
@@ -451,20 +451,20 @@ order: 1
 					A simple web framework for java, with flexible and dynamic feature, it is somewhat like asp.net, the
 					core idea is simple
 					and pure, you can handle it go-as-you-please！
-					<ul>
-						<li>
-							You can composite component with your custom components.
-						<li>
-							You can develop custom component with plain html template.
-						<li>
-							You can use component like a html tag.
-						<li>
-							Less code with more resuing.
-						<li>
-							Less Configuration, far light than jsf.
-						<li>
-							Drain advantages from asp.net and tapestry.
-					</ul>
+				<ul>
+					<li>
+						You can composite component with your custom components.
+					<li>
+						You can develop custom component with plain html template.
+					<li>
+						You can use component like a html tag.
+					<li>
+						Less code with more resuing.
+					<li>
+						Less Configuration, far light than jsf.
+					<li>
+						Drain advantages from asp.net and tapestry.
+				</ul>
 				</p>
 			</div>
 		</div>
